# numerical_analysis

./: .gitignore  README.md  numerical_analysis.sln
Demo/: CMakeLists.txt  Demo.cpp  Demo.vcxproj
numerical_analysis/: CMakeLists.txt  Mat.cpp  Mat.h  ReadMe.txt  Vec.cpp  Vec.h  na_algorithm.cpp  na_algorithm.h  numerical_analysis.cpp  numerical_analysis.vcxproj  numerical_analysis.vcxproj.filters  stdafx.cpp
numerical_analysis/include/: Mat.h
numerical_analysis/src/: Vec.cpp
unit_test/: CMakeLists.txt  Mat_UT.cpp  foo.cpp  na_algorithm_UT.cpp  unit_test.cpp  unit_test.vcxproj  unit_test.vcxproj.filters
